Contrast fix for report link in first column

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -475,6 +475,10 @@ div.search-facet-item:focus {
     background: #4138E0;
 }
 
+.regular-link {
+    color: #1F496E;
+}
+
 /******************************************************************/
 /* Media queries                                                  */
 /******************************************************************/
